--- a/KimonoApp/css/kimono-app.css
+++ b/KimonoApp/css/kimono-app.css
@@ -115,3 +115,11 @@ canvas {
 #choice-panel {
     padding-left: 80px;
 }
+
+.modal-open {
+padding-right: 0 !important
+}
+
+.modal-close {
+padding-right: 0 !important
+}
