--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -7,6 +7,9 @@ body {
     -webkit-user-select: none; /* Chrome/Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+ */
+    min-width: 610px;
+    width: auto !important;
+    width: 610px;
 }
 
 h1 {
@@ -17,13 +20,25 @@ h1 {
     margin-top: 20px;
 }
 
+.card {
+    min-width: 100px;
+}
+
 .scene-icon {
     width: 100%;
     height: 100%;
 }
 
-.season.selected img {
+.season.selected img, .formality.selected {
     opacity: 0.55;
+}
+
+.formality-btn {
+    background-color: #807da1;
+    padding: 5px 5px 5px 5px;
+    color: #f9f8f4;
+    border-radius: 0.1in;
+    width: 100%;
 }
 
 .btn-arrow {
