--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -7,9 +7,10 @@ body {
     -webkit-user-select: none; /* Chrome/Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+ */
-    min-width: 610px;
+    /*min-width: 610px;
     width: auto !important;
-    width: 610px;
+    width: 610px;*/
+    width: 100%;
 }
 
 h1 {
