--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -22,7 +22,8 @@ h1 {
 }
 
 .card {
-    min-width: 100px;
+    padding: 0px;
+    margin-right: 5px;
 }
 
 .scene-icon {
@@ -30,7 +31,7 @@ h1 {
     height: 100%;
 }
 
-.season.selected img, .formality.selected {
+.season.selected img, .formality.selected, .marital.selected {
     opacity: 0.55;
 }
 
@@ -49,3 +50,19 @@ h1 {
 .btn-arrow[disabled] {
     opacity: 0.5;
 }
+
+@media all and (max-width: 1200px) { /* screen size until 1200px */
+    body {
+        font-size: 1.5em; /* 1.5x default size */
+    }
+}
+@media all and (max-width: 1000px) { /* screen size until 1000px */
+    body {
+        font-size: 1.2em; /* 1.2x default size */
+        }
+    }
+@media all and (max-width: 500px) { /* screen size until 500px */
+    body {
+        font-size: 0.8em; /* 0.8x default size */
+        }
+    }
