* Some styling for dressing room components * Arrows added to menu on collapse

--- a/KimonoApp/css/scenario-nav.css
+++ b/KimonoApp/css/scenario-nav.css
@@ -7,6 +7,10 @@
     color: #f9f8f4;
 }
 
+#ScenarioNav img {
+    max-height: 100%;
+}
+
 #nav-bar .locked {
     background-color: #61b482;
 }
@@ -20,3 +24,5 @@
 .unlocked:hover {
     background-color: #61b482;
 }
+
+
