--- a/KimonoApp/css/dressing-room.css
+++ b/KimonoApp/css/dressing-room.css
@@ -21,33 +21,9 @@ h1 {
     margin-top: 20px;
 }
 
-.card {
-    padding: 0px;
-    margin-right: 5px;
-}
-
-.formality-card {
-    padding: 10px;
-    margin-right: 5px;
-    min-width: 25%;
-}
-
-
-.scene-icon {
-    width: 100%;
-    height: 100%;
-}
-
-.season.selected img, .formality.selected, .marital.selected {
-    opacity: 0.55;
-}
-
-.formality-btn {
-    background-color: #807da1;
-    padding: 5px 0px 5px 0px;
+#material-container .material {
     color: #f9f8f4;
-    border-radius: 0.1in;
-    width: 100%;
+    background-color: #88cca4;
 }
 
 .btn-arrow {
@@ -58,18 +34,46 @@ h1 {
     opacity: 0.5;
 }
 
+.nav-btn-arrow {
+    height: 50px;
+}
+.nav-btn-arrow[disabled] {
+    opacity: 0.5;
+}
+
+.dressing-room-heading {
+    color: #f9f8f4;
+}
+
 @media all and (max-width: 1200px) { /* screen size until 1200px */
     body {
         font-size: 1.5em; /* 1.5x default size */
+    }
+    .nav-btn-arrow {
+        visibility: hidden;
     }
 }
 @media all and (max-width: 1000px) { /* screen size until 1000px */
     body {
         font-size: 1.2em; /* 1.2x default size */
-        }
     }
+    .nav-btn-arrow {
+        visibility: hidden;
+    }
+}
+
+@media all and (max-width: 734px) { /* screen size until 500px */
+    body {
+        font-size: 0.8em; /* 0.8x default size */
+    }
+    .nav-btn-arrow {
+        visibility: visible;
+   }
+}
+
 @media all and (max-width: 500px) { /* screen size until 500px */
     body {
         font-size: 0.8em; /* 0.8x default size */
-        }
     }
+}
+
