* Added Obi page styling * * Obi choices are laid out on a draggable box * * Box disappears and is replaced by collapsable choice box for mobile * Resized canvas with window size maintaining aspect ratio

--- a/KimonoApp/css/scenario-nav.css
+++ b/KimonoApp/css/scenario-nav.css
@@ -18,10 +18,10 @@
     background-color:#88cca4;
 }
 
-.unlocked {
+#nav-bar .unlocked {
     background-color: #88cca4;
 }
-.unlocked:hover {
+#nav-bar .unlocked:hover {
     background-color: #61b482;
 }
 
