--- a/KimonoApp/css/dressing-room.css
+++ b/KimonoApp/css/dressing-room.css
@@ -33,6 +33,7 @@ body {
 #choice-panel h1 {
     margin-bottom: 15px;
     color: #f9f8f4;
+    font-size: 2.7em;
 }
 
 #obi-container *{
@@ -44,7 +45,9 @@ body {
     margin-bottom: 15px;
 }
 
-
+.draggableIcon {
+    margin-right: 20px;
+}
 
 nav {
     margin-bottom: 0px !important;
@@ -143,9 +146,14 @@ h1 {
 }
 
 @media all and (max-width: 734px) { /* screen size until 500px */
-    body, #choice-panel h1 {
+    body{
         font-size: 0.8em; /* 0.8x default size */
     }
+
+    #choice-panel h1 {
+        font-size: 1em;
+    }
+
     .nav-btn-arrow {
         visibility: visible;
    }
