* Added intro alert * Another potential mobile fix added

--- a/KimonoApp/css/dressing-room.css
+++ b/KimonoApp/css/dressing-room.css
@@ -13,6 +13,11 @@ body {
     width: 100%;
 }
 
+.modal-open .navbar-fixed-top,
+.modal-open .navbar-fixed-bottom {
+padding-right: 17px;
+}
+
 .choice-collapser {
     visibility: hidden;
 }
