--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -79,6 +79,18 @@ h1 {
     background-size: cover;
 }
 
+.modal-header {
+    background-color: #807da1;
+}
+
+.modal-title {
+    color: #f9f8f4;
+}
+
+.correct {
+    background-color: #88cca4 !important;
+}
+
 @media all and (max-width: 1200px) { /* screen size until 1200px */
     body {
         font-size: 1.5em; /* 1.5x default size */
