--- a/KimonoApp/css/fonts/fonts.css
+++ b/KimonoApp/css/fonts/fonts.css
@@ -2,3 +2,8 @@
 	font-family: MuseoSansRounded;
 	src: url(./MuseoSansRounded-500.otf);
 }
+
+@font-face {
+	font-family: MuseoSansCyrl;
+	src: url(./MuseoSansCyrl.otf);
+}
