* Added April 9th edits to project for testing

--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -7,9 +7,6 @@ body {
     -webkit-user-select: none; /* Chrome/Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+ */
-    /*min-width: 610px;
-    width: auto !important;
-    width: 610px;*/
     width: 100%;
 }
 
@@ -17,9 +14,11 @@ h1 {
     margin-bottom: 30px;
 }
 
-.modal-body p {
+.modal-body p, .credits {
     font-family: MuseoSansCyrl;
+    color: #404041;
     letter-spacing: 0pt;
+    font-size: 16px;
 }
 
 .end-btn {
@@ -135,6 +134,7 @@ h1 {
     
     .intro-body {
         background: url("../Images/General/Kimono_Play_title_page_mobile.png") no-repeat center center fixed; 
+        background-origin: content-box;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
