--- a/KimonoApp/css/dressing-room.css
+++ b/KimonoApp/css/dressing-room.css
@@ -18,9 +18,11 @@ body {
     overflow-y: auto;
 }
 
-.modal-body p {
+.modal-body p, .credits {
     font-family: MuseoSansCyrl;
+    color: #404041;
     letter-spacing: 0pt;
+    font-size: 16px;
 }
 
 .cancel-btn {
