--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -133,7 +133,7 @@ h1 {
     }
     
     .intro-body {
-        background: url("../Images/General/Kimono_Play_title_page_mobile.png") no-repeat center center fixed; 
+        background: url("../Images/General/Kimono_Play_title_page_mobile.png") no-repeat; 
         background-origin: content-box;
         -webkit-background-size: cover;
         -moz-background-size: cover;
