--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -119,6 +119,14 @@ h1 {
         font-size: 0.8em; /* 0.8x default size */
     }
 
+    .intro-body {
+        background: url("../Images/General/Kimono_Play_title_page_mobile.png") no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+    
     .start-btn {
         background-color: #88cca4;
         border-color:  #88cca4;
@@ -132,12 +140,4 @@ h1 {
         opacity: 0.7;
     }
     
-    .intro-body {
-        background: url("../Images/General/Kimono_Play_title_page_mobile.png") no-repeat; 
-        background-origin: content-box;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
 }
