--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -125,6 +125,7 @@ h1 {
         -moz-background-size: cover;
         -o-background-size: cover;
         background-size: cover;
+        height: 100%;
     }
 
     .start-btn {
