--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -120,15 +120,23 @@ h1 {
     }
 
     .intro-body {
-        background: url("../Images/General/Kimono_Play_title_page_mobile.png") no-repeat center center fixed; 
-        height: 100%;
+        background: url("../Images/General/Kimono_Play_title_page_mobile.png"); 
+        background-repeat: no-repeat;
+        -webkit-background-size: 100%; 
+        -moz-background-size: 100%; 
+        -o-background-size: 100%; 
+        background-size: 100%; 
+        -webkit-background-size: cover; 
+        -moz-background-size: cover; 
+        -o-background-size: cover; 
+        background-size: cover;
     }
 
     .start-btn {
         background-color: #88cca4;
         border-color:  #88cca4;
         position: absolute;
-        top: 33%;
+        top: 18%;
         left: 39%;
     }
     .start-btn:hover {
