--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -84,7 +84,7 @@ h1 {
     opacity: 0.7;
 }
 
-.intro-body {
+#intro-body {
     background: url("../Images/General/Kimono_Play_title_page.png") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -119,17 +119,11 @@ h1 {
         font-size: 0.8em; /* 0.8x default size */
     }
 
-    .intro-body {
+    #intro-body {
         background: url("../Images/General/Kimono_Play_title_page_mobile.png"); 
+        background-position: center center;
         background-repeat: no-repeat;
-        -webkit-background-size: 100%; 
-        -moz-background-size: 100%; 
-        -o-background-size: 100%; 
-        background-size: 100%; 
-        -webkit-background-size: cover; 
-        -moz-background-size: cover; 
-        -o-background-size: cover; 
-        background-size: cover;
+        background-size: 100%;
     }
 
     .start-btn {
