* Never ever have a splash image with a button where the button needs to be placed in a precise area

--- a/KimonoApp/css/scenario-builder.css
+++ b/KimonoApp/css/scenario-builder.css
@@ -130,8 +130,8 @@ h1 {
         background-color: #88cca4;
         border-color:  #88cca4;
         position: absolute;
-        top: 33%;
-        left: 39%;
+        top: 170px;
+        left: 120px;
     }
     .start-btn:hover {
         background-color: #88cca4;
