Changes to firefly script

--- a/newnewportfolio/static/css/base.css
+++ b/newnewportfolio/static/css/base.css
@@ -10,6 +10,16 @@ section {
     scroll-behavior: smooth;
 }
 
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome and Opera */
+  }
+
 /* Mobile Nav */
 @media (max-width: 1200px) {
     .navbar {
@@ -25,6 +35,7 @@ section {
 #splash {
     height: 100vh;
     position: relative;
+    background: #a3d5ff;
 }
 
 #splash canvas, #splash-overlay {
