--- a/newnewportfolio/static/css/base.css
+++ b/newnewportfolio/static/css/base.css
@@ -118,3 +118,57 @@ nav {
     background-color: #a3d5ff !important;
 }
 
+/* Portfolio */
+#portfolio {
+    background-color:#d9f0ff;
+}
+
+#portfolio .fa-circle, #portfolio .fa-github {
+    color: #ad7a99;
+}
+#portfolio .fa-github:hover {
+    color: #80556f;
+}
+#portfolio .fa-stack a {
+    outline: none;
+}
+
+
+.card-flip {
+    perspective: 1000px;
+}
+  
+.card-flip,
+.front,
+.back {
+    width: 100%;
+    height: 480px;
+}
+  
+.flip {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+  
+.front,
+.back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+  
+.front {
+    z-index: 2;
+    transform: rotateY(0deg);
+}
+  
+.back {
+    transform: rotateY(180deg);
+}
+
+.uniform-img-top {
+    height: 14rem;
+}
+
