Added height restriction to carousel

--- a/dmcoptometry/static/css/base.css
+++ b/dmcoptometry/static/css/base.css
@@ -67,7 +67,7 @@ div .dropdown-item:hover {
 
 /* Home */
 #overviewCarousel img {
-    height: 550px;
+    max-height: 850px;
 }
 
 @media screen and (max-width: 600px) {
