--- a/bluebronna/static/css/base.css
+++ b/bluebronna/static/css/base.css
@@ -47,7 +47,7 @@ body {
 /* Home */
 #overviewCarousel img {
     width: 100%;
-    max-height: 650px;
+    max-height: 850px;
 }
 
 #overviewCarousel {
@@ -129,7 +129,7 @@ body {
 }
 
 /* About - Locations */
-ul {
+.bulletless {
     list-style-type: none;
 }
 
@@ -312,6 +312,16 @@ ul {
     left: 0;
     top: 25%;
     text-align: center;
+    width: 100%;
+}
+
+/* Volunteer */
+.ss {
+    margin-bottom: 0;
+}
+
+#volunteerContent img {
+    height: 400px !important;
     width: 100%;
 }
 
